feat: additional monitoring configuration
Add XRay tracing configuration.

ECS metadata should be retrieved when appropriate and added to both XRay
traces and Sentry error logs.

TIS21-5582
TIS21-5585

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 application:
   environment: ${ENVIRONMENT:local}
 
+com:
+  amazonaws:
+    xray:
+      emitters:
+        daemon-address: ${AWS_XRAY_DAEMON_ADDRESS:}
+
 server:
   port: 8212
   servlet:
