--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,11 @@ server:
 sentry:
   dsn: ${SENTRY_DSN:}
   environment: ${application.environment}
+
+spring:
+  cloud:
+    aws:
+      endpoint: ${AWS_ENDPOINT:}
+  data:
+    mongodb:
+      uri: mongodb://${MONGO_USER:admin}:${MONGO_PASSWORD:pwd}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_DB:actions}?authSource=admin
