feat: store placement actions
TODO: tests, some refactoring to make it less repetitive and extract
that 12-week before start to a named constant.

TIS21-5620

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 application:
   environment: ${ENVIRONMENT:local}
   queues:
+    placement-synced: ${PLACEMENT_SYNCED_QUEUE}
     programme-membership-synced: ${PROGRAMME_MEMBERSHIP_SYNCED_QUEUE}
 
 com:
