feat: account and pm actions
integration tests currently broken

--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -1,7 +1,10 @@
 application:
   queues:
+    account-confirmed: dummy
     placement-synced: dummy
     programme-membership-synced: dummy
+  sns:
+    arn: dummy.fifo
 
 spring:
   cloud:
