some refactoring of action service placement handling

--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -4,7 +4,7 @@ application:
     placement-synced: dummy
     programme-membership-synced: dummy
   sns:
-    arn: dummy.fifo
+    arn: dummy
 
 spring:
   cloud:
