feat: handle coj-received events
This is the last one.

TIS21-6521

--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -1,6 +1,7 @@
 application:
   queues:
     account-confirmed: dummy
+    coj-received: dummy
     placement-synced: dummy
     programme-membership-synced: dummy
   sns:
