--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ application:
   environment: ${ENVIRONMENT:local}
   queues:
     account-confirmed: ${ACCOUNT_CONFIRMED_QUEUE}
+    coj-received: ${COJ_RECEIVED_QUEUE}
     placement-synced: ${PLACEMENT_SYNCED_QUEUE}
     programme-membership-synced: ${PROGRAMME_MEMBERSHIP_SYNCED_QUEUE}
   sns:
