fix: rework move-data API to event listener
TIS21-7871

--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -5,6 +5,7 @@ application:
     form-updated: dummy
     placement-synced: dummy
     programme-membership-synced: dummy
+    profile-move: dummy
   sns:
     arn: dummy
 
